fixed car details to text have aligned in center

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -458,6 +458,7 @@ header {
     }
 
     .feature {
+      text-align: center;
       flex-basis: 100%;
       padding: 0.3rem 1rem;
       border: 1px solid grey;
